@@ -1,17 +1,22 @@
 package ti4.helpers;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
 import java.util.Map.Entry;
-import java.util.concurrent.ThreadLocalRandom;
+import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
-
-import org.apache.commons.lang3.StringUtils;
-
 import net.dv8tion.jda.api.events.interaction.GenericInteractionCreateEvent;
 import net.dv8tion.jda.internal.utils.tuple.ImmutablePair;
 import net.dv8tion.jda.internal.utils.tuple.Pair;
-
+import ti4.commands.units.RemoveUnits;
 import ti4.generator.Mapper;
+import ti4.helpers.DiceHelper.Die;
+import ti4.helpers.Units.UnitType;
 import ti4.map.Game;
 import ti4.map.Planet;
 import ti4.map.Player;
@@ -24,33 +29,25 @@ import ti4.model.UnitModel;
 
 public class CombatHelper {
 
-    public static HashMap<UnitModel, Integer> GetAllUnits(UnitHolder unitHolder, Player player, GenericInteractionCreateEvent event) {
+    public static Map<UnitModel, Integer> GetAllUnits(UnitHolder unitHolder, Player player) {
         String colorID = Mapper.getColorID(player.getColor());
-        HashMap<String, Integer> unitsByAsyncId = unitHolder.getUnitAsyncIdsOnHolder(colorID);
+        Map<String, Integer> unitsByAsyncId = unitHolder.getUnitAsyncIdsOnHolder(colorID);
         Map<UnitModel, Integer> unitsInCombat = unitsByAsyncId.entrySet().stream().flatMap(
-            entry -> player.getUnitsByAsyncID(entry.getKey()).stream().map(x -> new ImmutablePair<>(x, entry.getValue()))).collect(Collectors.toMap(Pair::getLeft, Pair::getRight));
+            entry -> player.getUnitsByAsyncID(entry.getKey()).stream()
+                .map(x -> new ImmutablePair<>(x, entry.getValue())))
+            .collect(Collectors.toMap(Pair::getLeft, Pair::getRight));
 
         HashMap<UnitModel, Integer> output;
 
         output = new HashMap<>(unitsInCombat.entrySet().stream()
             .collect(Collectors.toMap(Entry::getKey, Entry::getValue)));
 
-         Set<String> duplicates = new HashSet<>();
+        Set<String> duplicates = new HashSet<>();
         List<String> dupes = output.keySet().stream()
             .filter(unit -> !duplicates.add(unit.getAsyncId()))
             .map(UnitModel::getBaseType)
-            .collect(Collectors.toList());
-        // List<String> missing = unitHolder.getUnitAsyncIdsOnHolder(colorID).keySet().stream()
-        //     .filter(unit -> player.getUnitsByAsyncID(unit.toLowerCase()).isEmpty())
-        //     .collect(Collectors.toList());
-
-        
-        // List<String> dupes = output.keySet().stream()
-        //     .filter(unit -> !duplicates.add(unit.getAsyncId()))
-        //     .map(UnitModel::getBaseType)
-        //     .toList();
-        for (int x = 0; x < dupes.size(); x++) {
-            String dupe = dupes.get(x);
+            .toList();
+        for (String dupe : dupes) {
             for (UnitModel mod : output.keySet()) {
                 if (mod.getBaseType().equalsIgnoreCase(dupe) && !mod.getId().contains("2")) {
                     output.put(mod, 0);
@@ -61,187 +58,141 @@ public class CombatHelper {
         return output;
     }
 
-    public static HashMap<UnitModel, Integer> GetUnitsInCombat(Tile tile, UnitHolder unitHolder, Player player,
+    public static Map<UnitModel, Integer> GetUnitsInCombat(Tile tile, UnitHolder unitHolder, Player player,
         GenericInteractionCreateEvent event, CombatRollType roleType, Game activeGame) {
         Planet unitHolderPlanet = null;
         if (unitHolder instanceof Planet) {
             unitHolderPlanet = (Planet) unitHolder;
         }
-        switch (roleType) {
-            case combatround:
-                return GetUnitsInCombatRound(unitHolder, player, event);
-            case AFB:
-                return GetUnitsInAFB(tile, player, event);
-            case bombardment:
-                return GetUnitsInBombardment(tile, player, event);
-            case SpaceCannonOffence:
-                return getUnitsInSpaceCannonOffense(tile, player, event, activeGame);
-            case SpaceCannonDefence:
-                return getUnitsInSpaceCannonDefence(unitHolderPlanet, player, event);
-            default:
-                return GetUnitsInCombatRound(unitHolder, player, event);
-        }
+        return switch (roleType) {
+            case combatround -> GetUnitsInCombatRound(unitHolder, player, event, tile);
+            case AFB -> GetUnitsInAFB(tile, player, event);
+            case bombardment -> GetUnitsInBombardment(tile, player, event);
+            case SpaceCannonOffence -> getUnitsInSpaceCannonOffense(tile, player, event, activeGame);
+            case SpaceCannonDefence -> getUnitsInSpaceCannonDefence(unitHolderPlanet, player, event);
+        };
     }
 
-    public static HashMap<UnitModel, Integer> GetUnitsInCombatRound(UnitHolder unitHolder, Player player, GenericInteractionCreateEvent event) {
+    public static Map<UnitModel, Integer> GetUnitsInCombatRound(UnitHolder unitHolder, Player player,
+        GenericInteractionCreateEvent event, Tile tile) {
         String colorID = Mapper.getColorID(player.getColor());
-        HashMap<String, Integer> unitsByAsyncId = unitHolder.getUnitAsyncIdsOnHolder(colorID);
+        Map<String, Integer> unitsByAsyncId = unitHolder.getUnitAsyncIdsOnHolder(colorID);
         Map<UnitModel, Integer> unitsInCombat = unitsByAsyncId.entrySet().stream().map(
             entry -> new ImmutablePair<>(
                 player.getPriorityUnitByAsyncID(entry.getKey(), unitHolder),
                 entry.getValue()))
             .collect(Collectors.toMap(Pair::getLeft, Pair::getRight));
-
         HashMap<UnitModel, Integer> output;
         if (unitHolder.getName().equals(Constants.SPACE)) {
-            output = new HashMap<>(unitsInCombat.entrySet().stream()
-                .filter(entry -> entry.getKey() != null && entry.getKey().getIsShip())
-                .collect(Collectors.toMap(Entry::getKey, Entry::getValue)));
+            if (unitsByAsyncId.containsKey("fs") && player.hasUnit("nekro_flagship")) {
+                output = new HashMap<>(unitsInCombat.entrySet().stream()
+                    .filter(entry -> entry.getKey() != null
+                        && (entry.getKey().getIsGroundForce() || entry.getKey().getIsShip()))
+                    .collect(Collectors.toMap(Entry::getKey, Entry::getValue)));
+                for (UnitHolder u2 : tile.getUnitHolders().values()) {
+                    if (u2 == unitHolder) {
+                        continue;
+                    }
+                    Map<String, Integer> unitsByAsyncId2 = u2.getUnitAsyncIdsOnHolder(colorID);
+                    Map<UnitModel, Integer> unitsInCombat2 = unitsByAsyncId2.entrySet().stream().map(
+                        entry -> new ImmutablePair<>(
+                            player.getPriorityUnitByAsyncID(entry.getKey(), unitHolder),
+                            entry.getValue()))
+                        .collect(Collectors.toMap(Pair::getLeft, Pair::getRight));
+                    HashMap<UnitModel, Integer> output2;
+                    output2 = new HashMap<>(unitsInCombat2.entrySet().stream()
+                        .filter(entry -> entry.getKey() != null
+                            && (entry.getKey().getIsGroundForce() || entry.getKey().getIsShip()))
+                        .collect(Collectors.toMap(Entry::getKey, Entry::getValue)));
+                    for (UnitModel unit : output2.keySet()) {
+                        if (output.containsKey(unit)) {
+                            output.put(unit, output.get(unit) + output2.get(unit));
+                        } else {
+                            output.put(unit, output2.get(unit));
+                        }
+                    }
+                }
+            } else {
+                output = new HashMap<>(unitsInCombat.entrySet().stream()
+                    .filter(entry -> entry.getKey() != null && entry.getKey().getIsShip())
+                    .collect(Collectors.toMap(Entry::getKey, Entry::getValue)));
+            }
         } else {
             output = new HashMap<>(unitsInCombat.entrySet().stream()
-                .filter(entry -> entry.getKey() != null && (entry.getKey().getIsGroundForce() || entry.getKey().getIsShip()))
+                .filter(entry -> entry.getKey() != null
+                    && (entry.getKey().getIsGroundForce() || entry.getKey().getIsShip()))
                 .collect(Collectors.toMap(Entry::getKey, Entry::getValue)));
         }
-        Set<String> duplicates = new HashSet<>();
-        List<String> dupes = output.keySet().stream()
-            .filter(unit -> !duplicates.add(unit.getAsyncId()))
-            .map(UnitModel::getBaseType)
-            .collect(Collectors.toList());
-        List<String> missing = unitHolder.getUnitAsyncIdsOnHolder(colorID).keySet().stream()
-            .filter(unit -> player.getUnitsByAsyncID(unit.toLowerCase()).isEmpty())
-            .collect(Collectors.toList());
-
-        // Gracefully fail when units don't exist
-        StringBuilder error = new StringBuilder();
-        if (missing.size() > 0) {
-            error.append("You do not seem to own any of the following unit types, so they will be skipped.");
-            error.append(" Ping bothelper if this seems to be in error.\n");
-            error.append("> Unowned units: ").append(missing).append("\n");
-        }
-        if (dupes.size() > 0) {
-            error.append("You seem to own multiple of the following unit types. I will roll all of them, just ignore any that you shouldn't have.\n");
-            error.append("> Duplicate units: ").append(dupes);
-        }
-        if (missing.size() > 0 || dupes.size() > 0) {
-            MessageHelper.sendMessageToChannel(event.getMessageChannel(), error.toString());
-        }
+        checkBadUnits(player, event, unitsByAsyncId, output);
 
         return output;
     }
 
-    public static HashMap<UnitModel, Integer> GetUnitsInAFB(Tile tile, Player player,
+    public static Map<UnitModel, Integer> GetUnitsInAFB(Tile tile, Player player,
         GenericInteractionCreateEvent event) {
         String colorID = Mapper.getColorID(player.getColor());
 
-        HashMap<String, Integer> unitsByAsyncId = new HashMap<>();
+        Map<String, Integer> unitsByAsyncId = new HashMap<>();
         for (UnitHolder unitHolder : tile.getUnitHolders().values()) {
-            HashMap<String, Integer> unitsOnHolderByAsyncId = unitHolder.getUnitAsyncIdsOnHolder(colorID);
-            for (Entry<String, Integer> unitEntry : unitsOnHolderByAsyncId.entrySet()) {
-                Integer existingCount = 0;
-                if (unitsByAsyncId.containsKey(unitEntry.getKey())) {
-                    existingCount = unitsByAsyncId.get(unitEntry.getKey());
-                }
-                unitsByAsyncId.put(unitEntry.getKey(), existingCount + unitEntry.getValue());
-            }
+            getUnitsOnHolderByAsyncId(colorID, unitsByAsyncId, unitHolder);
         }
 
-        Map<UnitModel, Integer> unitsInCombat = unitsByAsyncId.entrySet().stream().map(
-            entry -> new ImmutablePair<>(
-                player.getPriorityUnitByAsyncID(entry.getKey(), null),
-                entry.getValue()))
-            .collect(Collectors.toMap(Pair::getLeft, Pair::getRight));
+        Map<UnitModel, Integer> unitsInCombat = getUnitsInCombat(player, unitsByAsyncId);
 
         HashMap<UnitModel, Integer> output = new HashMap<>(unitsInCombat.entrySet().stream()
             .filter(entry -> entry.getKey() != null && entry.getKey().getAfbDieCount() > 0)
             .collect(Collectors.toMap(Entry::getKey, Entry::getValue)));
-        Set<String> duplicates = new HashSet<>();
-        List<String> dupes = output.keySet().stream()
-            .filter(unit -> !duplicates.add(unit.getAsyncId()))
-            .map(UnitModel::getBaseType)
-            .collect(Collectors.toList());
-        List<String> missing = unitsByAsyncId.keySet().stream()
-            .filter(unit -> player.getUnitsByAsyncID(unit.toLowerCase()).isEmpty())
-            .collect(Collectors.toList());
-
-        // Gracefully fail when units don't exist
-        StringBuilder error = new StringBuilder();
-        if (missing.size() > 0) {
-            error.append("You do not seem to own any of the following unit types, so they will be skipped.");
-            error.append(" Ping bothelper if this seems to be in error.\n");
-            error.append("> Unowned units: ").append(missing).append("\n");
-        }
-        if (dupes.size() > 0) {
-            error.append("You seem to own multiple of the following unit types. I will roll all of them, just ignore any that you shouldn't have.\n");
-            error.append("> Duplicate units: ").append(dupes);
-        }
-        if (missing.size() > 0 || dupes.size() > 0) {
-            MessageHelper.sendMessageToChannel(event.getMessageChannel(), error.toString());
-        }
+        checkBadUnits(player, event, unitsByAsyncId, output);
 
         return output;
     }
 
-    public static HashMap<UnitModel, Integer> GetUnitsInBombardment(Tile tile, Player player,
-        GenericInteractionCreateEvent event) {
-        String colorID = Mapper.getColorID(player.getColor());
-        HashMap<String, Integer> unitsByAsyncId = new HashMap<>();
-        for (UnitHolder unitHolder : tile.getUnitHolders().values()) {
-            HashMap<String, Integer> unitsOnHolderByAsyncId = unitHolder.getUnitAsyncIdsOnHolder(colorID);
-            for (Entry<String, Integer> unitEntry : unitsOnHolderByAsyncId.entrySet()) {
-                Integer existingCount = 0;
-                if (unitsByAsyncId.containsKey(unitEntry.getKey())) {
-                    existingCount = unitsByAsyncId.get(unitEntry.getKey());
-                }
-                unitsByAsyncId.put(unitEntry.getKey(), existingCount + unitEntry.getValue());
-            }
-        }
-        Map<UnitModel, Integer> unitsInCombat = unitsByAsyncId.entrySet().stream().map(
+    private static Map<UnitModel, Integer> getUnitsInCombat(Player player, Map<String, Integer> unitsByAsyncId) {
+        return unitsByAsyncId.entrySet().stream().map(
             entry -> new ImmutablePair<>(
                 player.getPriorityUnitByAsyncID(entry.getKey(), null),
                 entry.getValue()))
             .collect(Collectors.toMap(Pair::getLeft, Pair::getRight));
+    }
+
+    private static void getUnitsOnHolderByAsyncId(String colorID, Map<String, Integer> unitsByAsyncId, UnitHolder unitHolder) {
+        Map<String, Integer> unitsOnHolderByAsyncId = unitHolder.getUnitAsyncIdsOnHolder(colorID);
+        for (Entry<String, Integer> unitEntry : unitsOnHolderByAsyncId.entrySet()) {
+            Integer existingCount = 0;
+            if (unitsByAsyncId.containsKey(unitEntry.getKey())) {
+                existingCount = unitsByAsyncId.get(unitEntry.getKey());
+            }
+            unitsByAsyncId.put(unitEntry.getKey(), existingCount + unitEntry.getValue());
+        }
+    }
+
+    public static Map<UnitModel, Integer> GetUnitsInBombardment(Tile tile, Player player,
+        GenericInteractionCreateEvent event) {
+        String colorID = Mapper.getColorID(player.getColor());
+        Map<String, Integer> unitsByAsyncId = new HashMap<>();
+        for (UnitHolder unitHolder : tile.getUnitHolders().values()) {
+            getUnitsOnHolderByAsyncId(colorID, unitsByAsyncId, unitHolder);
+        }
+        Map<UnitModel, Integer> unitsInCombat = getUnitsInCombat(player, unitsByAsyncId);
 
         HashMap<UnitModel, Integer> output = new HashMap<>(unitsInCombat.entrySet().stream()
             .filter(entry -> entry.getKey() != null && entry.getKey().getBombardDieCount() > 0)
             .collect(Collectors.toMap(Entry::getKey, Entry::getValue)));
-        Set<String> duplicates = new HashSet<>();
-        List<String> dupes = output.keySet().stream()
-            .filter(unit -> !duplicates.add(unit.getAsyncId()))
-            .map(UnitModel::getBaseType)
-            .collect(Collectors.toList());
-        List<String> missing = unitsByAsyncId.keySet().stream()
-            .filter(unit -> player.getUnitsByAsyncID(unit.toLowerCase()).isEmpty())
-            .collect(Collectors.toList());
-
-        // Gracefully fail when units don't exist
-        StringBuilder error = new StringBuilder();
-        if (missing.size() > 0) {
-            error.append("You do not seem to own any of the following unit types, so they will be skipped.");
-            error.append(" Ping bothelper if this seems to be in error.\n");
-            error.append("> Unowned units: ").append(missing).append("\n");
-        }
-        if (dupes.size() > 0) {
-            error.append(
-                "You seem to own multiple of the following unit types. I will roll all of them, just ignore any that you shouldn't have.\n");
-            error.append("> Duplicate units: ").append(dupes);
-        }
-        if (missing.size() > 0 || dupes.size() > 0) {
-            MessageHelper.sendMessageToChannel(event.getMessageChannel(), error.toString());
-        }
+        checkBadUnits(player, event, unitsByAsyncId, output);
 
         return output;
     }
 
-    public static HashMap<UnitModel, Integer> getUnitsInSpaceCannonDefence(Planet planet, Player player,
+    public static Map<UnitModel, Integer> getUnitsInSpaceCannonDefence(Planet planet, Player player,
         GenericInteractionCreateEvent event) {
         String colorID = Mapper.getColorID(player.getColor());
 
-        HashMap<String, Integer> unitsByAsyncId = new HashMap<>();
+        Map<String, Integer> unitsByAsyncId = new HashMap<>();
         if (planet == null) {
             return new HashMap<>();
         }
 
-        HashMap<String, Integer> unitsOnHolderByAsyncId = planet.getUnitAsyncIdsOnHolder(colorID);
+        Map<String, Integer> unitsOnHolderByAsyncId = planet.getUnitAsyncIdsOnHolder(colorID);
         for (Entry<String, Integer> unitEntry : unitsOnHolderByAsyncId.entrySet()) {
             Integer existingCount = 0;
             if (unitsByAsyncId.containsKey(unitEntry.getKey())) {
@@ -275,53 +226,23 @@ public class CombatHelper {
             .filter(entry -> entry.getKey() != null && entry.getKey().getSpaceCannonDieCount() > 0)
             .collect(Collectors.toMap(Entry::getKey, Entry::getValue)));
 
-        Set<String> duplicates = new HashSet<>();
-        List<String> dupes = output.keySet().stream()
-            .filter(unit -> !duplicates.add(unit.getAsyncId()))
-            .map(UnitModel::getBaseType)
-            .collect(Collectors.toList());
-        List<String> missing = unitsByAsyncId.keySet().stream()
-            .filter(unit -> player.getUnitsByAsyncID(unit.toLowerCase()).isEmpty())
-            .collect(Collectors.toList());
-
-        // Gracefully fail when units don't exist
-        StringBuilder error = new StringBuilder();
-        if (missing.size() > 0) {
-            error.append("You do not seem to own any of the following unit types, so they will be skipped.");
-            error.append(" Ping bothelper if this seems to be in error.\n");
-            error.append("> Unowned units: ").append(missing).append("\n");
-        }
-        if (dupes.size() > 0) {
-            error.append(
-                "You seem to own multiple of the following unit types. I will roll all of them, just ignore any that you shouldn't have.\n");
-            error.append("> Duplicate units: ").append(dupes);
-        }
-        if (event != null && (missing.size() > 0 || dupes.size() > 0)) {
-            MessageHelper.sendMessageToChannel(event.getMessageChannel(), error.toString());
-        }
+        checkBadUnits(player, event, unitsByAsyncId, output);
 
         return output;
     }
 
-    public static HashMap<UnitModel, Integer> getUnitsInSpaceCannonOffense(Tile tile, Player player,
+    public static Map<UnitModel, Integer> getUnitsInSpaceCannonOffense(Tile tile, Player player,
         GenericInteractionCreateEvent event, Game activeGame) {
         String colorID = Mapper.getColorID(player.getColor());
 
-        HashMap<String, Integer> unitsByAsyncId = new HashMap<>();
+        Map<String, Integer> unitsByAsyncId = new HashMap<>();
 
         Collection<UnitHolder> unitHolders = tile.getUnitHolders().values();
         for (UnitHolder unitHolder : unitHolders) {
-            HashMap<String, Integer> unitsOnHolderByAsyncId = unitHolder.getUnitAsyncIdsOnHolder(colorID);
-            for (Entry<String, Integer> unitEntry : unitsOnHolderByAsyncId.entrySet()) {
-                Integer existingCount = 0;
-                if (unitsByAsyncId.containsKey(unitEntry.getKey())) {
-                    existingCount = unitsByAsyncId.get(unitEntry.getKey());
-                }
-                unitsByAsyncId.put(unitEntry.getKey(), existingCount + unitEntry.getValue());
-            }
+            getUnitsOnHolderByAsyncId(colorID, unitsByAsyncId, unitHolder);
         }
 
-        HashMap<String, Integer> adjacentUnitsByAsyncId = new HashMap<>();
+        Map<String, Integer> adjacentUnitsByAsyncId = new HashMap<>();
         Set<String> adjTiles = FoWHelper.getAdjacentTiles(activeGame, tile.getPosition(), player, false);
         for (String adjacentTilePosition : adjTiles) {
             if (adjacentTilePosition.equals(tile.getPosition())) {
@@ -329,14 +250,7 @@ public class CombatHelper {
             }
             Tile adjTile = activeGame.getTileByPosition(adjacentTilePosition);
             for (UnitHolder unitHolder : adjTile.getUnitHolders().values()) {
-                HashMap<String, Integer> unitsOnHolderByAsyncId = unitHolder.getUnitAsyncIdsOnHolder(colorID);
-                for (Entry<String, Integer> unitEntry : unitsOnHolderByAsyncId.entrySet()) {
-                    Integer existingCount = 0;
-                    if (adjacentUnitsByAsyncId.containsKey(unitEntry.getKey())) {
-                        existingCount = adjacentUnitsByAsyncId.get(unitEntry.getKey());
-                    }
-                    adjacentUnitsByAsyncId.put(unitEntry.getKey(), existingCount + unitEntry.getValue());
-                }
+                getUnitsOnHolderByAsyncId(colorID, adjacentUnitsByAsyncId, unitHolder);
             }
         }
 
@@ -353,15 +267,15 @@ public class CombatHelper {
 
         // Check for space cannon die on planets
         for (UnitHolder unitHolder : unitHolders) {
-            if (unitHolder instanceof Planet) {
-                Planet planet = (Planet) unitHolder;
+            if (unitHolder instanceof Planet planet) {
                 PlanetModel planetModel = Mapper.getPlanet(planet.getName());
                 String ccID = Mapper.getControlID(player.getColor());
                 if (planet.getControlList().contains(ccID) && planet.getSpaceCannonDieCount() > 0) {
                     UnitModel planetFakeUnit = new UnitModel();
                     planetFakeUnit.setSpaceCannonHitsOn(planet.getSpaceCannonHitsOn());
                     planetFakeUnit.setSpaceCannonDieCount(planet.getSpaceCannonDieCount());
-                    planetFakeUnit.setName(Helper.getPlanetRepresentationPlusEmoji(planetModel.getId()) + " space cannon");
+                    planetFakeUnit
+                        .setName(Helper.getPlanetRepresentationPlusEmoji(planetModel.getId()) + " space cannon");
                     planetFakeUnit.setAsyncId(planet.getName() + "pds");
                     planetFakeUnit.setId(planet.getName() + "pds");
                     planetFakeUnit.setBaseType("pds");
@@ -377,18 +291,36 @@ public class CombatHelper {
 
         HashMap<UnitModel, Integer> adjacentOutput = new HashMap<>(unitsOnAdjacentTiles.entrySet().stream()
             .filter(entry -> entry.getKey() != null
-                && entry.getKey().getSpaceCannonDieCount() > 0
-                && entry.getKey().getDeepSpaceCannon())
+                && entry.getKey().getSpaceCannonDieCount(player, activeGame) > 0
+                && (entry.getKey().getDeepSpaceCannon() || activeGame.playerHasLeaderUnlockedOrAlliance(player, "mirvedacommander") || (entry.getKey().getBaseType().equalsIgnoreCase("spacedock"))))
             .collect(Collectors.toMap(Entry::getKey, Entry::getValue)));
-
+        int limit = 0;
         for (var entry : adjacentOutput.entrySet()) {
-            if (output.containsKey(entry.getKey())) {
-                output.put(entry.getKey(), entry.getValue() + output.get(entry.getKey()));
-            } else {
-                output.put(entry.getKey(), entry.getValue());
+            if(entry.getKey().getDeepSpaceCannon()){
+                if (output.containsKey(entry.getKey())) {
+                    output.put(entry.getKey(), entry.getValue() + output.get(entry.getKey()));
+                } else {
+                    output.put(entry.getKey(), entry.getValue());
+                }
+            }else{
+                if(limit < 1){
+                    limit = 1;
+                    if (output.containsKey(entry.getKey())) {
+                        output.put(entry.getKey(), 1 + output.get(entry.getKey()));
+                    } else {
+                        output.put(entry.getKey(), 1);
+                    }
+                }
             }
         }
 
+        checkBadUnits(player, event, unitsByAsyncId, output);
+
+        return output;
+    }
+
+    private static void checkBadUnits(Player player, GenericInteractionCreateEvent event,
+        Map<String, Integer> unitsByAsyncId, HashMap<UnitModel, Integer> output) {
         Set<String> duplicates = new HashSet<>();
         List<String> dupes = output.keySet().stream()
             .filter(unit -> !duplicates.add(unit.getAsyncId()))
@@ -398,22 +330,12 @@ public class CombatHelper {
             .filter(unit -> player.getUnitsByAsyncID(unit.toLowerCase()).isEmpty())
             .collect(Collectors.toList());
 
-        // Gracefully fail when units don't exist
-        StringBuilder error = new StringBuilder();
-        if (missing.size() > 0) {
-            error.append("You do not seem to own any of the following unit types, so they will be skipped.");
-            error.append(" Ping bothelper if this seems to be in error.\n");
-            error.append("> Unowned units: ").append(missing).append("\n");
-        }
         if (dupes.size() > 0) {
-            error.append("You seem to own multiple of the following unit types. I will roll all of them, just ignore any that you shouldn't have.\n");
-            error.append("> Duplicate units: ").append(dupes);
+            CombatMessageHelper.displayDuplicateUnits(event, missing);
         }
-        if (missing.size() > 0 || dupes.size() > 0) {
-            MessageHelper.sendMessageToChannel(event.getMessageChannel(), error.toString());
+        if (missing.size() > 0) {
+            CombatMessageHelper.displayMissingUnits(event, missing);
         }
-
-        return output;
     }
 
     public static Player GetOpponent(Player player, List<UnitHolder> unitHolders, Game activeGame) {
@@ -421,17 +343,17 @@ public class CombatHelper {
         String playerColorID = Mapper.getColorID(player.getColor());
         List<Player> opponents = unitHolders.stream().flatMap(holder -> holder.getUnitColorsOnHolder().stream())
             .filter(color -> !color.equals(playerColorID))
-            .map(color -> activeGame.getPlayerByColorID(color))
-            .filter(playerOptional -> playerOptional.isPresent())
-            .map(playerOptional -> playerOptional.get())
-            .collect(Collectors.toList());
+            .map(activeGame::getPlayerByColorID)
+            .filter(Optional::isPresent)
+            .map(Optional::get)
+            .toList();
 
         if (opponents.size() >= 1) {
             opponent = opponents.get(0);
         }
         if (opponents.size() > 1) {
             Optional<Player> activeOpponent = opponents.stream()
-                .filter(opp -> opp.getUserID().equals(activeGame.getActivePlayer()))
+                .filter(opp -> opp.getUserID().equals(activeGame.getActivePlayerID()))
                 .findAny();
             if (activeOpponent.isPresent()) {
                 opponent = activeOpponent.get();
@@ -440,104 +362,167 @@ public class CombatHelper {
         return opponent;
     }
 
-    public static String RollForUnits(Map<UnitModel, Integer> units,
-        List<NamedCombatModifierModel> extraRolls, List<NamedCombatModifierModel> customMods,
-        List<NamedCombatModifierModel> autoMods, Player player, Player opponent,
-        Game activeGame, CombatRollType rollType) {
+    public static String RollForUnits(Map<UnitModel, Integer> playerUnits, Map<UnitModel, Integer> opponentUnits,
+        List<NamedCombatModifierModel> extraRolls,
+        List<NamedCombatModifierModel> autoMods, List<NamedCombatModifierModel> tempMods, Player player,
+        Player opponent,
+        Game activeGame, CombatRollType rollType, GenericInteractionCreateEvent event, Tile activeSystem) {
+
         String result = "";
 
-        List<NamedCombatModifierModel> mods = new ArrayList<>(customMods);
-        mods.addAll(autoMods);
-        result += CombatModHelper.GetModifiersText("With automatic modifiers: \n", units, autoMods);
-        result += CombatModHelper.GetModifiersText("With custom modifiers: \n", units, customMods);
+        List<NamedCombatModifierModel> mods = new ArrayList<>(autoMods);
+        mods.addAll(tempMods);
 
-        // Display extra rolls info
-        result += CombatModHelper.GetModifiersText("With automatic extra rolls: \n", units, extraRolls);
+        List<NamedCombatModifierModel> modAndExtraRolls = new ArrayList<>(mods);
+        modAndExtraRolls.addAll(extraRolls);
+
+        result += CombatMessageHelper.displayModifiers("With modifiers: \n", playerUnits, modAndExtraRolls);
 
         // Actually roll for each unit
         int totalHits = 0;
         StringBuilder resultBuilder = new StringBuilder(result);
-        List<UnitModel> unitsList = new ArrayList<>(units.keySet());
-        for (Map.Entry<UnitModel, Integer> entry : units.entrySet()) {
+        List<UnitModel> playerUnitsList = new ArrayList<>(playerUnits.keySet());
+        List<UnitModel> opponentUnitsList = new ArrayList<>(opponentUnits.keySet());
+        int totalMisses = 0;
+        UnitHolder space = activeSystem.getUnitHolders().get("space");
+        String extra = "";
+        for (Map.Entry<UnitModel, Integer> entry : playerUnits.entrySet()) {
             UnitModel unit = entry.getKey();
             int numOfUnit = entry.getValue();
 
-            int toHit = unit.getCombatDieHitsOnForAbility(rollType);
+            int toHit = unit.getCombatDieHitsOnForAbility(rollType, player, activeGame);
             int modifierToHit = CombatModHelper.GetCombinedModifierForUnit(unit, numOfUnit, mods, player, opponent,
                 activeGame,
-                unitsList, rollType);
+                playerUnitsList, opponentUnitsList, rollType);
             int extraRollsForUnit = CombatModHelper.GetCombinedModifierForUnit(unit, numOfUnit, extraRolls, player,
                 opponent,
-                activeGame, unitsList, rollType);
-            int numRollsPerUnit = unit.getCombatDieCountForAbility(rollType);
-
+                activeGame, playerUnitsList, opponentUnitsList, rollType);
+            int numRollsPerUnit = unit.getCombatDieCountForAbility(rollType, player, activeGame);
+            boolean extraRollsCount = false;
+            if((numRollsPerUnit > 1 || extraRollsForUnit > 0) && activeGame.getFactionsThatReactedToThis("thalnosPlusOne").equalsIgnoreCase("true")){
+                extraRollsCount = true;
+                numRollsPerUnit = 1;
+                extraRollsForUnit = 0;
+            }
+            if(rollType == CombatRollType.SpaceCannonOffence && numRollsPerUnit == 3 && unit.getBaseType().equalsIgnoreCase("spacedock")){
+                numOfUnit = 1;
+                activeGame.setCurrentReacts("EBSFaction", "");
+            }
             int numRolls = (numOfUnit * numRollsPerUnit) + extraRollsForUnit;
-            int[] resultRolls = new int[numRolls];
-            for (int index = 0; index < numRolls; index++) {
-                int min = 1;
-                int max = 10;
-                resultRolls[index] = ThreadLocalRandom.current().nextInt(max - min + 1) + min;
+            List<Die> resultRolls = DiceHelper.rollDice(toHit - modifierToHit, numRolls);
+            player.setExpectedHitsTimes10(player.getExpectedHitsTimes10() + (numRolls * (11 - toHit + modifierToHit)));
+
+            int hitRolls = DiceHelper.countSuccesses(resultRolls);
+            if (unit.getId().equalsIgnoreCase("jolnar_flagship")) {
+                for (Die die : resultRolls) {
+                    if (die.getResult() > 8) {
+                        hitRolls = hitRolls + 2;
+                    }
+                }
             }
-
-            int[] hitRolls = Arrays.stream(resultRolls)
-                .filter(roll -> roll >= toHit - modifierToHit)
-                .toArray();
-
-            String hitsSuffix = "";
-            totalHits += hitRolls.length;
-            if (hitRolls.length > 1) {
-                hitsSuffix = "s";
-            }
-
-            // Rolls str fragment
-            String unitRollsTextInfo = "";
-            int totalRolls = unit.getCombatDieCountForAbility(rollType) + extraRollsForUnit;
-            if (totalRolls > 1) {
-                unitRollsTextInfo = String.format("%s rolls,", unit.getCombatDieCountForAbility(rollType), toHit);
-                if (extraRollsForUnit > 0 && unit.getCombatDieCountForAbility(rollType) > 1) {
-                    unitRollsTextInfo = String.format("%s rolls (+%s rolls),",
-                        unit.getCombatDieCountForAbility(rollType),
-                        extraRollsForUnit);
-                } else if (extraRollsForUnit > 0) {
-                    unitRollsTextInfo = String.format("(+%s rolls),",
-                        extraRollsForUnit);
+            int misses = numRolls-hitRolls;
+            totalMisses = totalMisses+misses;
+            
+            if(misses > 0 && !extraRollsCount && activeGame.getFactionsThatReactedToThis("thalnosPlusOne").equalsIgnoreCase("true")){
+                extra = player.getFactionEmoji()+" destroyed "+misses+" of their own "+unit.getName() +" due to Thalnos misses";
+                for(String thalnosUnit : activeGame.getThalnosUnits().keySet()){
+                    String pos = thalnosUnit.split("_")[0];
+                    String unitHolderName = thalnosUnit.split("_")[1];
+                    Tile tile = activeGame.getTileByPosition(pos);
+                    int amount = activeGame.getSpecificThalnosUnit(thalnosUnit);
+                    String unitName = ButtonHelper.getUnitName(unit.getAsyncId());
+                    thalnosUnit = thalnosUnit.split("_")[2].replace("damaged","");
+                    if(thalnosUnit.equals(unitName)){
+                        new RemoveUnits().unitParsing(event, player.getColor(), tile, misses +" "+ unitName+" "+unitHolderName, activeGame);
+                        if(unitName.equalsIgnoreCase("infantry")){
+                            ButtonHelper.resolveInfantryDeath(activeGame, player, misses);
+                        }
+                        if(unitName.equalsIgnoreCase("mech")){
+                            if ( player.hasUnit("mykomentori_mech")) {
+                                for (int x = 0; x < misses; x++) {
+                                    ButtonHelper.rollMykoMechRevival(activeGame, player);
+                                }
+                            }
+                            if(player.hasTech("sar")){
+                                for (int x = 0; x < misses; x++) {
+                                    player.setTg(player.getTg() + 1);
+                                    MessageHelper.sendMessageToChannel(ButtonHelper.getCorrectChannel(player, activeGame), player.getRepresentation() + " you gained 1tg (" + (player.getTg() - 1)
+                                        + "->" + player.getTg() + ") from 1 of your mechs dying while you own Self-Assembly Routines. This is not an optional gain.");
+                                    ButtonHelperAbilities.pillageCheck(player, activeGame);
+                                }
+                                ButtonHelperAgents.resolveArtunoCheck(player, activeGame, 1);
+                            }
+                        }
+                        break;
+                    }
+                }
+                
+            }else{
+                if(misses > 0 && activeGame.getFactionsThatReactedToThis("thalnosPlusOne").equalsIgnoreCase("true")){
+                    MessageHelper.sendMessageToChannel(event.getMessageChannel(),player.getFactionEmoji()+" had "+misses+" "+unit.getName() +" misses on a thalnos roll, but no units were removed due to extra rolls being unaccounted for");
                 }
             }
 
-            String unitTypeHitsInfo = String.format("hits on %s", toHit);
-            if (modifierToHit != 0) {
-                String modifierToHitString = Integer.toString(modifierToHit);
-                if (modifierToHit > 0) {
-                    modifierToHitString = "+" + modifierToHitString;
-                }
+            totalHits += hitRolls;
 
-                if ((toHit - modifierToHit) <= 1) {
-                    unitTypeHitsInfo = String.format("always hits (%s mods)",
-                        modifierToHitString);
-                } else {
-                    unitTypeHitsInfo = String.format("hits on %s (%s mods)", (toHit - modifierToHit),
-                        modifierToHitString);
-                }
-            }
-            String upgradedUnitName = "";
-            if (!StringUtils.isBlank(unit.getUpgradesFromUnitId()) || !StringUtils.isBlank(unit.getFaction())) {
-                upgradedUnitName = String.format(" %s", unit.getName());
+            String unitRoll = CombatMessageHelper.displayUnitRoll(unit, toHit, modifierToHit, numOfUnit, numRollsPerUnit, extraRollsForUnit, resultRolls, hitRolls);
+            resultBuilder.append(unitRoll);
+            List<Die> resultRolls2 = new ArrayList<>();
+            int numMisses = numRolls - hitRolls;
+            if (activeGame.playerHasLeaderUnlockedOrAlliance(player, "jolnarcommander") && rollType != CombatRollType.combatround && numMisses > 0) {
+                int numRolls2 = numMisses;
+                resultRolls2 = DiceHelper.rollDice(toHit - modifierToHit, numRolls2);
+                player.setExpectedHitsTimes10(player.getExpectedHitsTimes10() + (numRolls2 * (11 - toHit + modifierToHit)));
+                int hitRolls2 = DiceHelper.countSuccesses(resultRolls2);
+                totalHits += hitRolls2;
+                String unitRoll2 = CombatMessageHelper.displayUnitRoll(unit, toHit, modifierToHit, numOfUnit, numRollsPerUnit, 0, resultRolls2, hitRolls2);
+                resultBuilder.append("Rerolling " + numMisses + " misses due to Jol-Nar Commander:\n " + unitRoll2);
             }
 
-            List<String> optionalInfoParts = Arrays.asList(upgradedUnitName, unitRollsTextInfo,
-                unitTypeHitsInfo);
-            String optionalText = optionalInfoParts.stream().filter(str -> StringUtils.isNotBlank(str))
-                .collect(Collectors.joining(" "));
+            if (activeGame.getFactionsThatReactedToThis("munitionsReserves").equalsIgnoreCase(player.getFaction()) && rollType == CombatRollType.combatround && numMisses > 0) {
+                int numRolls2 = numMisses;
+                resultRolls2 = DiceHelper.rollDice(toHit - modifierToHit, numRolls2);
+                player.setExpectedHitsTimes10(player.getExpectedHitsTimes10() + (numRolls2 * (11 - toHit + modifierToHit)));
+                int hitRolls2 = DiceHelper.countSuccesses(resultRolls2);
+                totalHits += hitRolls2;
+                String unitRoll2 = CombatMessageHelper.displayUnitRoll(unit, toHit, modifierToHit, numOfUnit, numRollsPerUnit, 0, resultRolls2, hitRolls2);
+                resultBuilder.append("Munitions rerolling " + numMisses + " misses: " + unitRoll2);
+            }
 
-            String unitEmoji = Helper.getEmojiFromDiscord(unit.getBaseType());
-            resultBuilder.append(String.format("%s %s%s %s - %s hit%s\n", numOfUnit, unitEmoji, optionalText,
-                Arrays.toString(resultRolls), hitRolls.length, hitsSuffix));
+            int argentInfKills = 0;
+            if (player != opponent && unit.getId().equalsIgnoreCase("argent_destroyer2") && rollType == CombatRollType.AFB && space.getUnitCount(UnitType.Infantry, opponent.getColor()) > 0) {
+                for (Die die : resultRolls) {
+                    if (die.getResult() > 8) {
+                        argentInfKills++;
+                    }
+                }
+                for (Die die : resultRolls2) {
+                    if (die.getResult() > 8) {
+                        argentInfKills++;
+                    }
+                }
+                argentInfKills = Math.min(argentInfKills, space.getUnitCount(UnitType.Infantry, opponent.getColor()));
+            }
+            if (argentInfKills > 0) {
+                String kills = "\nDue to SWA II destroyer ability, " + argentInfKills + " of " + opponent.getRepresentation(false, true) + " infantry were destroyed\n";
+                resultBuilder.append(kills);
+                space.removeUnit(Mapper.getUnitKey(AliasHandler.resolveUnit("infantry"), opponent.getColorID()), argentInfKills);
+                ButtonHelper.resolveInfantryDeath(activeGame, opponent, argentInfKills);
+            }
         }
         result = resultBuilder.toString();
 
-        StringBuilder hitEmojis = new StringBuilder();
-        hitEmojis.append(":boom:".repeat(Math.max(0, totalHits)));
-        result += String.format("\n**Total hits %s** %s\n", totalHits, hitEmojis);
+        result += CombatMessageHelper.displayHitResults(totalHits);
+        player.setActualHits(player.getActualHits() + totalHits);
+        if (player.hasRelic("thalnos") && rollType == CombatRollType.combatround && totalMisses > 0 && !activeGame.getFactionsThatReactedToThis("thalnosPlusOne").equalsIgnoreCase("true")) {
+            result = result + "\n" + player.getFactionEmoji() + " You have crown of thalnos and can reroll misses (adding +1) at the risk of your troops lives";
+        }
+        if(!extra.isEmpty()){
+            result = result + "\n\n"+extra;
+        }
+        if (activeGame.getFactionsThatReactedToThis("munitionsReserves").equalsIgnoreCase(player.getFaction()) && rollType == CombatRollType.combatround){
+            activeGame.setCurrentReacts("munitionsReserves", "");
+        }
         return result;
     }
 }
