@@ -4,19 +4,17 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import java.util.Map.Entry;
+import java.util.Optional;
 import java.util.stream.Collectors;
-
 import org.apache.commons.lang3.StringUtils;
-
-import ti4.commands.player.AbilityInfo;
 import ti4.generator.Mapper;
 import ti4.map.Game;
 import ti4.map.Leader;
 import ti4.map.Player;
 import ti4.map.Tile;
 import ti4.map.UnitHolder;
+import ti4.model.AbilityModel;
 import ti4.model.AgendaModel;
 import ti4.model.CombatModifierModel;
 import ti4.model.NamedCombatModifierModel;
@@ -26,46 +24,9 @@ import ti4.model.TileModel;
 import ti4.model.UnitModel;
 
 public class CombatModHelper {
-    public static String GetModifiersText(String prefixText, Map<UnitModel, Integer> units,
-            List<NamedCombatModifierModel> modifiers) {
-        String result = "";
-        if (!modifiers.isEmpty()) {
-
-            result += prefixText;
-            List<String> modifierMessages = new ArrayList<>();
-            for (NamedCombatModifierModel namedModifier : modifiers) {
-                CombatModifierModel mod = namedModifier.getModifier();
-                String unitScope = mod.getScope(); 
-                if (StringUtils.isNotBlank(unitScope)) {
-                    Optional<UnitModel> unitScopeModel = units.keySet().stream()
-                            .filter(unit -> unit.getAsyncId().equals(mod.getScope())).findFirst();
-                    if (unitScopeModel.isPresent()) {
-                        unitScope = Helper.getEmojiFromDiscord(unitScopeModel.get().getBaseType());
-                    }
-                } else {
-                    unitScope = "all";
-                }
-
-                String plusPrefix = "+";
-                Integer modifierValue = mod.getValue();
-                if (modifierValue < 0) {
-                    plusPrefix = "";
-                }
-                String modifierName = namedModifier.getName();
-                if (StringUtils.isNotBlank(modifierName)) {
-                    modifierMessages.add(modifierName);
-                } else {
-                    modifierMessages.add(String.format("%s%s for %s", plusPrefix, modifierValue, unitScope));
-                }
-
-            }
-            result += String.join("\n", modifierMessages) + "\n";
-        }
-        return result;
-    }
 
     public static Boolean IsModInScopeForUnits(List<UnitModel> units, CombatModifierModel modifier,
-            CombatRollType rollType) {
+        CombatRollType rollType) {
         for (UnitModel unit : units) {
             if (modifier.isInScopeForUnit(unit, units, rollType)) {
                 return true;
@@ -74,142 +35,148 @@ public class CombatModHelper {
         return false;
     }
 
-    /// Retrieves Always on modifiers, 
-    /// based on the player's info (techs, owned relics, active leaders, units), current laws in play, units in combat, and opponent race abilities)
-    public static List<NamedCombatModifierModel> CalculateAutomaticMods(Player player, Player opponent,
-            Map<UnitModel, Integer> unitsByQuantity,
-            TileModel tile,
-            Game activeGame,
-            CombatRollType rollType,
-            String modifierType) {
-        List<NamedCombatModifierModel> alwaysOnMods = new ArrayList<>();
+    public static List<NamedCombatModifierModel> GetModifiers(Player player, Player opponent,
+        Map<UnitModel, Integer> unitsByQuantity,
+        TileModel tile,
+        Game activeGame,
+        CombatRollType rollType,
+        String modifierType) {
+        List<NamedCombatModifierModel> modifiers = new ArrayList<>();
         HashMap<String, CombatModifierModel> combatModifiers = new HashMap<>(Mapper.getCombatModifiers());
         combatModifiers = new HashMap<>(combatModifiers.entrySet().stream()
-                .filter(entry -> entry.getValue().getForCombatAbility().equals(rollType.toString()))
-                .filter(entry -> entry.getValue().getType().equals(modifierType))
-                .collect(Collectors.toMap(Entry::getKey, Entry::getValue)));
+            .filter(entry -> entry.getValue().getForCombatAbility().equals(rollType.toString()))
+            .filter(entry -> entry.getValue().getType().equals(modifierType))
+            .filter(entry -> !entry.getValue().getApplyToOpponent())
+            .filter(entry -> IsModInScopeForUnits(new ArrayList<>(unitsByQuantity.keySet()), entry.getValue(), rollType))
+            .collect(Collectors.toMap(Entry::getKey, Entry::getValue)));
 
         for (String ability : player.getAbilities()) {
             Optional<CombatModifierModel> relevantMod = combatModifiers.values().stream()
-                    .filter(modifier -> modifier.isRelevantTo(Constants.ABILITY, ability))
-                    .findFirst();
-            
-            if (relevantMod.isPresent() 
-                    && checkModPassesCondition(relevantMod.get(), tile, player, opponent, unitsByQuantity,
-                            activeGame)) {
-                alwaysOnMods.add(new NamedCombatModifierModel(relevantMod.get(), AbilityInfo.getAbilityRepresentation(ability)));
+                .filter(modifier -> modifier.isRelevantTo(Constants.ABILITY, ability))
+                .findFirst();
+
+            if (relevantMod.isPresent()
+                && checkModPassesCondition(relevantMod.get(), tile, player, opponent, unitsByQuantity,
+                    activeGame)) {
+                AbilityModel abilityModel = Mapper.getAbility(ability);
+                modifiers.add(new NamedCombatModifierModel(relevantMod.get(), abilityModel.getRepresentation()));
             }
         }
 
         for (String tech : player.getTechs()) {
             Optional<CombatModifierModel> relevantMod = combatModifiers.values().stream()
-                    .filter(modifier -> modifier.isRelevantTo(Constants.TECH, tech))
-                    .findFirst();
-            
-            if (relevantMod.isPresent() 
-                    && checkModPassesCondition(relevantMod.get(), tile, player, opponent, unitsByQuantity,
-                            activeGame)) {
-                alwaysOnMods.add(new NamedCombatModifierModel(relevantMod.get(), Helper.getTechRepresentationLong(tech)));
+                .filter(modifier -> modifier.isRelevantTo(Constants.TECH, tech))
+                .findFirst();
+
+            if (relevantMod.isPresent()
+                && checkModPassesCondition(relevantMod.get(), tile, player, opponent, unitsByQuantity,
+                    activeGame)) {
+                TechnologyModel technologyModel = Mapper.getTech(tech);
+                modifiers
+                    .add(new NamedCombatModifierModel(relevantMod.get(), technologyModel.getRepresentation(true)));
             }
         }
 
-        if(opponent != null){
+        if (opponent != null && opponent != player
+            && ((player != activeGame.getActivePlayer() && opponent == activeGame.getActivePlayer()) || player == activeGame.getActivePlayer())) {
             for (String tech : opponent.getTechs()) {
                 Optional<CombatModifierModel> relevantMod = combatModifiers.values().stream()
-                        .filter(modifier -> modifier.isRelevantTo("opponent_tech", tech))
-                        .findFirst();
-                
-                if (relevantMod.isPresent() 
-                        && checkModPassesCondition(relevantMod.get(), tile, player, opponent, unitsByQuantity,
-                                activeGame)) {
-                    alwaysOnMods.add(new NamedCombatModifierModel(relevantMod.get(), Helper.getTechRepresentationLong(tech)));
+                    .filter(modifier -> modifier.isRelevantTo("opponent_tech", tech))
+                    .findFirst();
+
+                if (relevantMod.isPresent()
+                    && checkModPassesCondition(relevantMod.get(), tile, player, opponent, unitsByQuantity,
+                        activeGame)) {
+                    TechnologyModel technologyModel = Mapper.getTech(tech);
+                    modifiers.add(
+                        new NamedCombatModifierModel(relevantMod.get(), technologyModel.getRepresentation(true)));
                 }
             }
         }
 
-
         for (String relic : player.getRelics()) {
             Optional<CombatModifierModel> relevantMod = combatModifiers.values().stream()
-                    .filter(modifier -> modifier.isRelevantTo(Constants.RELIC, relic))
-                    .findFirst();
-            
+                .filter(modifier -> modifier.isRelevantTo(Constants.RELIC, relic))
+                .findFirst();
+
             if (relevantMod.isPresent() && checkModPassesCondition(relevantMod.get(), tile, player, opponent,
-                    unitsByQuantity, activeGame)) {
+                unitsByQuantity, activeGame)) {
                 RelicModel relicModel = Mapper.getRelic(relic);
-                alwaysOnMods.add(new NamedCombatModifierModel(relevantMod.get(), relicModel.getSimpleRepresentation()));
+                modifiers.add(new NamedCombatModifierModel(relevantMod.get(), relicModel.getSimpleRepresentation()));
             }
         }
 
         List<AgendaModel> lawAgendasTargetingPlayer = activeGame.getLawsInfo().entrySet().stream()
-                .filter(entry -> entry.getValue().equals(player.getFaction()))
-                .map(entry -> Mapper.getAgenda(entry.getKey()))
-                .toList();
+            .filter(entry -> entry.getValue().equals(player.getFaction()))
+            .map(entry -> Mapper.getAgenda(entry.getKey()))
+            .toList();
         for (AgendaModel agenda : lawAgendasTargetingPlayer) {
             Optional<CombatModifierModel> relevantMod = combatModifiers.values().stream()
-                    .filter(modifier -> modifier.isRelevantTo(Constants.AGENDA, agenda.getAlias()))
-                    .findFirst();
-            
-            if (relevantMod.isPresent() 
-                    && checkModPassesCondition(relevantMod.get(), tile, player, opponent, unitsByQuantity,
-                            activeGame)) {
-                alwaysOnMods.add(new NamedCombatModifierModel(relevantMod.get(), Emojis.Agenda + " " + agenda.getName()));
+                .filter(modifier -> modifier.isRelevantTo(Constants.AGENDA, agenda.getAlias()))
+                .findFirst();
+
+            if (relevantMod.isPresent()
+                && checkModPassesCondition(relevantMod.get(), tile, player, opponent, unitsByQuantity,
+                    activeGame)) {
+                modifiers
+                    .add(new NamedCombatModifierModel(relevantMod.get(), Emojis.Agenda + " " + agenda.getName()));
             }
         }
 
         List<UnitModel> unitsInCombat = new ArrayList<>(unitsByQuantity.keySet());
         for (UnitModel unit : unitsInCombat) {
             Optional<CombatModifierModel> relevantMod = combatModifiers.values().stream()
-                    .filter(modifier -> modifier.isRelevantTo(Constants.UNIT, unit.getAlias()))
-                    .findFirst();
-            
-            if (relevantMod.isPresent() 
-                    && checkModPassesCondition(relevantMod.get(), tile, player, opponent, unitsByQuantity,
-                            activeGame)) {
-                alwaysOnMods.add(
-                                new NamedCombatModifierModel(relevantMod.get(),
-                                        Helper.getEmojiFromDiscord(unit.getBaseType()) + " "
-                                                + unit.getName() + " " + unit.getAbility()));
+                .filter(modifier -> modifier.isRelevantTo(Constants.UNIT, unit.getAlias()))
+                .findFirst();
+
+            if (relevantMod.isPresent()
+                && checkModPassesCondition(relevantMod.get(), tile, player, opponent, unitsByQuantity,
+                    activeGame)) {
+                modifiers.add(
+                    new NamedCombatModifierModel(relevantMod.get(),
+                        Emojis.getEmojiFromDiscord(unit.getBaseType()) + " "
+                            + unit.getName() + " " + unit.getAbility()));
             }
         }
-            
+
         for (Leader leader : activeGame.playerUnlockedLeadersOrAlliance(player)) {
             if (leader.isExhausted() || leader.isLocked()) {
                 continue;
             }
             Optional<CombatModifierModel> relevantMod = combatModifiers.values().stream()
-                    .filter(modifier -> modifier.isRelevantTo(Constants.LEADER, leader.getId()))
-                    .findFirst();
+                .filter(modifier -> modifier.isRelevantTo(Constants.LEADER, leader.getId()))
+                .findFirst();
 
             if (relevantMod.isPresent()
-                    && checkModPassesCondition(relevantMod.get(), tile, player, opponent, unitsByQuantity,
-                            activeGame)) {
-                alwaysOnMods.add(
-                        new NamedCombatModifierModel(relevantMod.get(), Helper.getLeaderFullRepresentation(leader)));
+                && checkModPassesCondition(relevantMod.get(), tile, player, opponent, unitsByQuantity,
+                    activeGame)) {
+                modifiers.add(
+                    new NamedCombatModifierModel(relevantMod.get(), Helper.getLeaderFullRepresentation(leader)));
             }
         }
 
         List<CombatModifierModel> customAlwaysRelveantMods = combatModifiers.values().stream()
-                .filter(modifier -> modifier.isRelevantTo(Constants.CUSTOM, Constants.CUSTOM))
-                .collect(Collectors.toList());
+            .filter(modifier -> modifier.isRelevantTo(Constants.CUSTOM, Constants.CUSTOM))
+            .toList();
         for (CombatModifierModel relevantMod : customAlwaysRelveantMods) {
             if (checkModPassesCondition(relevantMod, tile, player, opponent, unitsByQuantity,
-                    activeGame)) {
-                alwaysOnMods.add(
-                        new NamedCombatModifierModel(relevantMod, relevantMod.getRelated().get(0).getMessage()));
+                activeGame)) {
+                modifiers.add(
+                    new NamedCombatModifierModel(relevantMod, relevantMod.getRelated().get(0).getMessage()));
             }
         }
-        
-        return alwaysOnMods;
+
+        return modifiers;
     }
 
     public static Integer GetCombinedModifierForUnit(UnitModel unit, Integer numOfUnit,
-            List<NamedCombatModifierModel> modifiers, Player player,
-            Player opponent, Game activeGame, List<UnitModel> allUnits, CombatRollType rollType) {
+        List<NamedCombatModifierModel> modifiers, Player player,
+        Player opponent, Game activeGame, List<UnitModel> playerUnits, List<UnitModel> opponentUnits, CombatRollType rollType) {
         int modsValue = 0;
         for (NamedCombatModifierModel namedModifier : modifiers) {
             CombatModifierModel modifier = namedModifier.getModifier();
-            if (modifier.isInScopeForUnit(unit, allUnits, rollType)) {
-                Integer modValue = GetVariableModValue(modifier, player, opponent, activeGame);
+            if (modifier.isInScopeForUnit(unit, playerUnits, rollType)) {
+                Integer modValue = GetVariableModValue(modifier, player, opponent, activeGame, opponentUnits, unit);
                 Integer perUnitCount = 1;
                 if (modifier.getApplyEachForQuantity()) {
                     perUnitCount = numOfUnit;
@@ -221,13 +188,25 @@ public class CombatModHelper {
     }
 
     public static Boolean checkModPassesCondition(CombatModifierModel modifier, TileModel onTile, Player player,
-            Player opponent, Map<UnitModel, Integer> unitsByQuantity, Game game) {
+        Player opponent, Map<UnitModel, Integer> unitsByQuantity, Game game) {
         boolean meetsCondition = false;
         String condition = "";
-        if(modifier != null && modifier.getCondition() != null){
+        if (modifier != null && modifier.getCondition() != null) {
             condition = modifier.getCondition();
         }
         switch (condition) {
+            case Constants.MOD_OPPONENT_TEKKLAR_PLAYER_OWNER -> {
+                if (opponent != null
+                    && player.getPromissoryNotesOwned().stream().anyMatch("tekklar"::equals)) {
+                    meetsCondition = opponent.getTempCombatModifiers().stream().anyMatch(
+                        mod -> "tekklar".equals(mod.getRelatedID())
+                            && mod.getRelatedType().equals(Constants.PROMISSORY_NOTES))
+                        ||
+                        opponent.getNewTempCombatModifiers().stream().anyMatch(
+                            mod -> "tekklar".equals(mod.getRelatedID())
+                                && mod.getRelatedType().equals(Constants.PROMISSORY_NOTES));
+                }
+            }
             case Constants.MOD_OPPONENT_FRAG -> {
                 if (opponent != null) {
                     meetsCondition = opponent.getFragments().size() > 0;
@@ -238,7 +217,7 @@ public class CombatModHelper {
                     String opponentFaction = opponent.getFaction();
                     meetsCondition = player.getTechs().stream()
                         .map(Mapper::getTech)
-                        .anyMatch(tech -> tech.getFaction().equals(opponentFaction));
+                        .anyMatch(tech -> tech.getFaction().orElse("").equals(opponentFaction));
                 }
             }
             case Constants.MOD_PLANET_MR_LEGEND_HOME -> {
@@ -252,17 +231,76 @@ public class CombatModHelper {
                 if (onTile.getPlanets().contains(Constants.MR)) {
                     meetsCondition = true;
                 }
+                if (game.getTile(onTile.getId()) != null) {
+                    if (ButtonHelper.isTileLegendary(game.getTile(onTile.getId()), game)) {
+                        meetsCondition = true;
+                    }
+                }
+
             }
             case Constants.MOD_HAS_FRAGILE -> meetsCondition = player.getAbilities().contains("fragile");
             case Constants.MOD_OPPONENT_NO_CC_FLEET -> meetsCondition = !player.getMahactCC().contains(opponent.getColor());
             case Constants.MOD_UNITS_TWO_MATCHING_NOT_FF -> {
                 if (unitsByQuantity.entrySet().size() == 1) {
                     Entry<UnitModel, Integer> unitByQuantity = new ArrayList<>(unitsByQuantity.entrySet()).get(0);
-                    meetsCondition = unitByQuantity.getValue() == 2 && !"ff".equals(unitByQuantity.getKey().getAsyncId());
+                    meetsCondition = unitByQuantity.getValue() == 2
+                        && !"ff".equals(unitByQuantity.getKey().getAsyncId());
                 }
             }
             case Constants.MOD_NEBULA_DEFENDER -> {
-                if (onTile.isNebula() && !game.getActivePlayer().equals(player.getUserID())) {
+                if (onTile.isNebula() && !game.getActivePlayerID().equals(player.getUserID()) && !game.getFactionsThatReactedToThis("mahactHeroTarget").equalsIgnoreCase(player.getFaction())) {
+                    meetsCondition = true;
+                }
+            }
+            case "vaylerianhero" -> {
+                if (player == game.getActivePlayer() && !game.getFactionsThatReactedToThis("vaylerianHeroActive").isEmpty()) {
+                    meetsCondition = true;
+                }
+            }
+            case "solagent" -> {
+                if (game.getFactionsThatReactedToThis("solagent").contains(player.getFaction())) {
+                    meetsCondition = true;
+                }
+            }
+            case "letnevagent" -> {
+                if (game.getFactionsThatReactedToThis("letnevagent").contains(player.getFaction())) {
+                    meetsCondition = true;
+                }
+            }
+            case "thalnosPlusOne" -> {
+                if (game.getFactionsThatReactedToThis("thalnosPlusOne").equalsIgnoreCase("true")) {
+                    meetsCondition = true;
+                }
+            }
+            case "nivyn_commander_damaged" -> {
+                if (game.playerHasLeaderUnlockedOrAlliance(player, "nivyncommander")) {
+                    meetsCondition = true;
+                }
+            }
+            case "lizho_commander_particular" -> {
+                if (game.playerHasLeaderUnlockedOrAlliance(player, "lizhocommander")) {
+                    int nonFighter = 0;
+                    int infantry = 0;
+                    for (UnitModel unitM : unitsByQuantity.keySet()) {
+                        if (unitM.getIsShip()) {
+                            if (!unitM.getBaseType().equalsIgnoreCase("fighter")) {
+                                nonFighter = nonFighter + unitsByQuantity.get(unitM);
+                            }
+                        } else {
+                            if (unitM.getBaseType().equalsIgnoreCase("infantry")) {
+                                infantry = infantry + unitsByQuantity.get(unitM);
+                            }
+                        }
+                    }
+                    if (nonFighter < 1 && infantry < 2) {
+                        meetsCondition = true;
+                    } else if (nonFighter < 2) {
+                        meetsCondition = true;
+                    }
+                }
+            }
+            case "naazFS" -> {
+                if (ButtonHelper.doesPlayerHaveFSHere("naaz_flagship", player, game.getTileByPosition(game.getActiveSystem()))) {
                     meetsCondition = true;
                 }
             }
@@ -273,10 +311,12 @@ public class CombatModHelper {
 
     ///
     /// The amount of the mod is usually static (eg +2 fighters)
-    /// But for some (mostly flagships), the value is scaled depending on game state like how many fragments you have
+    /// But for some (mostly flagships), the value is scaled depending on game state
+    /// like how many fragments you have
     /// or how many POs the opponent has scored that you havent etc.
     ///
-    public static Integer GetVariableModValue(CombatModifierModel mod, Player player, Player opponent, Game activeGame) {
+    public static Integer GetVariableModValue(CombatModifierModel mod, Player player, Player opponent,
+        Game activeGame, List<UnitModel> opponentUnitsInCombat, UnitModel origUnit) {
         double value = mod.getValue().doubleValue();
         double multiplier = 1.0;
         Long scalingCount = (long) 0;
@@ -286,16 +326,16 @@ public class CombatModHelper {
         if (StringUtils.isNotBlank(mod.getValueScalingType())) {
             switch (mod.getValueScalingType()) {
                 case Constants.FRAGMENT -> {
-                    if(player.hasFoundCulFrag()){
+                    if (player.hasFoundCulFrag()) {
                         scalingCount += 1;
                     }
-                    if(player.hasFoundHazFrag()){
+                    if (player.hasFoundHazFrag()) {
                         scalingCount += 1;
                     }
-                    if(player.hasFoundIndFrag()){
+                    if (player.hasFoundIndFrag()) {
                         scalingCount += 1;
                     }
-                    if(player.hasFoundUnkFrag()){
+                    if (player.hasFoundUnkFrag()) {
                         scalingCount += 1;
                     }
                 }
@@ -334,9 +374,22 @@ public class CombatModHelper {
                         }
                     }
                 }
+                case Constants.MOD_OPPONENT_NON_FIGHTER_SHIP -> {
+                    scalingCount += opponentUnitsInCombat.stream()
+                        .filter(unit -> !unit.getBaseType().equals("fighter"))
+                        .count();
+                }
+                case "damaged_units_same_type" -> {
+                    UnitHolder space = activeGame.getTileByPosition(activeGame.getActiveSystem()).getUnitHolders().get("space");
+                    int count = 0;
+                    if (space.getUnitDamage().get(Mapper.getUnitKey(AliasHandler.resolveUnit(origUnit.getBaseType()), player.getColorID())) != null) {
+                        count = space.getUnitDamage().get(Mapper.getUnitKey(AliasHandler.resolveUnit(origUnit.getBaseType()), player.getColorID()));
+                    }
+                    scalingCount += count;
+                    scalingCount = Math.min(scalingCount,2);
+                }
                 case Constants.MOD_OPPONENT_UNIT_TECH -> {
                     if (opponent != null) {
-                        // TODO:If player.getunittech existed, you could reuse it here.
                         scalingCount = opponent.getTechs().stream()
                             .map(Mapper::getTech)
                             .filter(tech -> tech.getType() == TechnologyModel.TechnologyType.UNITUPGRADE)
@@ -345,10 +398,9 @@ public class CombatModHelper {
                 }
                 case Constants.MOD_OPPONENT_FACTION_TECH -> {
                     if (opponent != null) {
-                        // player.getFactionTEchs?
                         scalingCount = opponent.getTechs().stream()
                             .map(Mapper::getTech)
-                            .filter(tech -> StringUtils.isNotBlank(tech.getFaction()))
+                            .filter(tech -> StringUtils.isNotBlank(tech.getFaction().orElse("")))
                             .count();
                     }
                 }
@@ -361,10 +413,10 @@ public class CombatModHelper {
         return (int) value;
     }
 
-    public static List<NamedCombatModifierModel> FilterRelevantMods(List<NamedCombatModifierModel> mods,
-            List<UnitModel> units, CombatRollType rollType) {
-        return mods.stream()
-                .filter(model -> IsModInScopeForUnits(units, model.getModifier(), rollType))
-                .toList();
-    }
+    // public static List<NamedCombatModifierModel> FilterRelevantMods(List<NamedCombatModifierModel> mods,
+    //         List<UnitModel> units, CombatRollType rollType) {
+    //     return mods.stream()
+    //             .filter(model -> IsModInScopeForUnits(units, model.getModifier(), rollType))
+    //             .toList();
+    // }
 }
